RESOLVED FIXED311471
view-timeline-inset serialization fails to coalesce identical non-pooled values
https://bugs.webkit.org/show_bug.cgi?id=311471
Summary view-timeline-inset serialization fails to coalesce identical non-pooled values
Chris Dumez
Reported 2026-04-04 02:17:47 PDT
view-timeline-inset serialization fails to coalesce identical non-pooled values.
Attachments
Chris Dumez
Comment 1 2026-04-04 02:19:24 PDT
Chris Dumez
Comment 2 2026-04-04 19:10:24 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58990
EWS
Comment 3 2026-04-04 19:31:52 PDT
Committed 310590@main (29aca44d868d): <https://commits.webkit.org/310590@main> Reviewed commits have been landed. Closing PR #62029 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-04-04 19:32:13 PDT
Note You need to log in before you can comment on or make changes to this bug.