view-timeline-inset serialization fails to coalesce identical non-pooled values https://bugs.webkit.org/show_bug.cgi?id=311471

Reviewed by Anne van Kesteren.

consumeSingleViewTimelineInsetItem() used RefPtr pointer comparison
(operator!=) to check whether start and end insets were equal. This
only worked for values that happen to be singletons in the
CSSValuePool (keywords like auto, and integer px/% values 0-255).
For non-pooled values like 1.5px, 300px, or 1em, two separately
allocated CSSPrimitiveValues with the same value would always compare
as not-equal, causing "1.5px 1.5px" to serialize as-is instead of
coalescing to "1.5px".

Fix by using CSSValue::equals() for value-based comparison.

No new tests, updated existing WPT test:
imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-parsing.html

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-parsing-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/css/view-timeline-inset-parsing.html:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Timeline.cpp:
(WebCore::CSSPropertyParserHelpers::consumeSingleViewTimelineInsetItem):

Canonical link: https://commits.webkit.org/310590@main